add the return versionID to the return of the KV endpoints
