# rest/docs/swagger/swagger.yaml
@@ -1,5 +1,16 @@
 basePath: '{{.BasePath}}'
 definitions:
+  api.AddFundsRequest:
+    properties:
+      amount:
+        type: integer
+      mappings:
+        type: object
+      signature:
+        type: string
+      wallet:
+        type: string
+    type: object
   api.CheckTransactionResponse:
     properties:
       nodeId:
@@ -9,10 +20,28 @@ definitions:
       signature:
         type: string
     type: object
+  api.CreateWalletRequest:
+    properties:
+      address:
+        type: string
+      initObject:
+        type: string
+      mappings:
+        type: object
+      pubKey:
+        type: string
+    type: object
   api.Dependency: {}
   api.Error:
     properties:
       error:
+        type: string
+    type: object
+  api.InitResponse:
+    properties:
+      error:
+        type: string
+      initObject:
         type: string
     type: object
   api.LabelObject:
@@ -21,6 +50,8 @@ definitions:
         type: string
       object:
         type: object
+      versionId:
+        type: string
     type: object
   api.LabelVersionID:
     properties:
@@ -76,6 +107,13 @@ definitions:
       object:
         type: string
     type: object
+  api.Response:
+    properties:
+      error:
+        type: string
+      transaction:
+        type: string
+    type: object
   api.Trace:
     properties:
       contractId:
@@ -117,6 +155,19 @@ definitions:
         items:
           $ref: '#/definitions/api.Trace'
         type: array
+    type: object
+  api.TransferFundsRequest:
+    properties:
+      amount:
+        type: integer
+      fromWallet:
+        type: string
+      mappings:
+        type: object
+      signature:
+        type: string
+      toWallet:
+        type: string
     type: object
   api.VersionIDResponse:
     properties:
@@ -174,6 +225,134 @@ paths:
       summary: Checks something
       tags:
       - checker
+  /api/cs-coin/wallet:
+    post:
+      consumes:
+      - application/json
+      description: Create a new Wallet from address generated by the user
+      operationId: createWallet
+      parameters:
+      - description: wallet
+        in: body
+        name: wallet
+        required: true
+        schema:
+          $ref: '#/definitions/api.CreateWalletRequest'
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.Response'
+            type: object
+      summary: Create a new Wallet from address generated by the user
+      tags:
+      - cs-coin-methods
+  /api/cs-coin/wallet/add-funds:
+    post:
+      consumes:
+      - application/json
+      description: Add new funds to user wallet
+      operationId: addFunds
+      parameters:
+      - description: request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/api.AddFundsRequest'
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.Response'
+            type: object
+      summary: Add new funds to a user wallet
+      tags:
+      - cs-coin-methods
+  /api/cs-coin/wallet/init/{addr}:
+    get:
+      consumes:
+      - application/json
+      description: Generate the seed object for a new wallet
+      operationId: init
+      parameters:
+      - description: addr
+        in: path
+        name: addr
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.InitResponse'
+            type: object
+      summary: Generate the seed object for a new wallet
+      tags:
+      - cs-coin-init
+  /api/cs-coin/wallet/transfer-funds:
+    post:
+      consumes:
+      - application/json
+      description: Transfer funds from a wallet to another
+      operationId: transferFunds
+      parameters:
+      - description: request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/api.TransferFundsRequest'
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.Response'
+            type: object
+      summary: Transfer funds from a wallet to another
+      tags:
+      - cs-coin-methods
   /api/kv/label/{label}:
     get:
       consumes:
